--- a/login_style.css
+++ b/login_style.css
@@ -32,7 +32,7 @@ body {
     display: flex;
     position: absolute;
     width: 500px;
-    height: 400px;
+    height: min-content;
     left: 0; right: 0; top: 0; bottom: 0;
     margin: auto;
     padding: 60px 80px;
@@ -45,8 +45,9 @@ body {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.30);
 }
 
-.box .fill {
+.fill {
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: flex-start;
     align-items: baseline;
@@ -54,14 +55,14 @@ body {
     border-bottom: 1px solid #fff;
 }
 
-.box .fill p.text {
+p.text {
     font-size: 24px;
     font-weight: 500;
     color: #fff;
     margin: 0;
 }
 
-.box .fill #name {
+.fill #name {
     width: 100%;
     background-color: #000;
     border: 0;
@@ -71,7 +72,7 @@ body {
     margin: 0;
 }
 
-.box .fill #pass {
+.fill #pass {
     width: 100%;
     background-color: #000;
     border: 0;
@@ -94,7 +95,7 @@ body {
     margin: 0;
 }
 
-.box .forgot-submit #submit {
+.box .forgot-submit #submit-1 {
     padding: 10px 20px;
     border-radius: 12px;
     background-color: #FF7757;
@@ -102,4 +103,55 @@ body {
     font-weight: 500;
     color: #fff;
     margin: 0;
+    cursor: pointer;
+}
+
+#form {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: baseline;
+    gap: 50px;
+}
+
+.fill #email {
+    width: 100%;
+    background-color: #000;
+    border: 0;
+    font-size: 24px;
+    font-weight: 500;
+    color: #fff;
+    margin: 0;
+}
+
+.fill #username {
+    width: 100%;
+    background-color: #000;
+    border: 0;
+    font-size: 24px;
+    font-weight: 500;
+    color: #fff;
+    margin: 0;
+}
+
+.fill #pass_ {
+    width: 100%;
+    background-color: #000;
+    border: 0;
+    font-size: 24px;
+    font-weight: 500;
+    color: #fff;
+    margin: 0;
+}
+
+.box .forgot-submit #submit-2 {
+    padding: 10px 20px;
+    border-radius: 12px;
+    background-color: #FF7757;
+    font-size: 24px;
+    font-weight: 500;
+    color: #fff;
+    margin: 0;
+    cursor: pointer;
 }
